--- a/wiki/Muslim.wikitext
+++ b/wiki/Muslim.wikitext
@@ -1,35 +1,300 @@
-==English==
-===Proper noun===
-'''Muslim''' (''plural'' [[Muslims]])
-
-#A person who is a believer in [[Islam]].
-
-====Variant spellings====
-*[[Moslem]]
-
-====Translations====
-*Arabic: [[مسلم]]
-*[[Breton]]: [[muzulman]] ''m''
-*Dutch: [[moslim]] ''m''
-*Finnish: [[muslimi]]
-*French: [[Musulman]] ''m'', [[Musulmane]] ''f''
-*[[Interlingua]]: muslim
-*Italian: [[musulmano]] ''m'', [[musulmana]] ''f''
-*Polish: [[muzułmanin]] ''m'', [[muzułmanka]] ''f''
-*Romanian: [[musulman]] ''m''
-*Slovene: [[musliman]] ''m'', [[muslimanka]] ''f''
-*Spanish: [[musulmán]] ''m'', [[musulmana]] ''f''
-
-===Adjective===<!-- this may be another case of a noun used adjectivally. [[User:Hippietrail|Hippietrail]] 06:50, 9 Mar 2004 (UTC) -->
-'''Muslim''' (''no [[comparative]] or [[superlative]]'')
-
-#Relating to a belief in [[Islam]].
-
-====Translations====
-*[[Breton]]: [[muzulman]]
-*Dutch: [[islamitisch]], [[moslims]], [[muzulmaans]]
-*Finnish: [[islamilainen]]
-*French: [[musulman]] ''m''
-*Polish: [[islamski]], [[muzułmański]] ''m''
-*Slovene: [[islamski]] ''m'', [[islamska]] ''f'', [[islamsko]] ''n'', [[muslimanski]] ''m'', [[muslimanska]] ''f'', [[muslimansko]] ''n''
-*Spanish: [[musulmán]] ''m'', [[musulmana]] ''f''
+[http://PP_Woven_Bag.ec51.com pp woven bag]
+[http://Packaging_Machinery.ec51.com packaging machinery]
+[http://Paper_Box.ec51.com paper box]
+[http://paperboard.ec51.com paperboard]
+[http://Pearl_Film.ec51.com pearl film]
+[http://Perfume_Bottle.ec51.com perfume bottle]
+[http://Perfume_Bottles.ec51.com perfume bottles]
+[http://Plain_Film.ec51.com plain film]
+[http://Plastic_Bag.ec51.com plastic bag]
+[http://Plastic_Bottle.ec51.com plastic bottle]
+[http://Plastic_Woven_Bag.ec51.com plastic woven bag]
+[http://Polyimide_Film.ec51.com polyimide film]
+[http://Printed_Tape.ec51.com printed tape]
+[http://Printed_Tissue_Paper.ec51.com printed tissue paper]
+[http://Printing_Film.ec51.com printing film]
+[http://Release_Paper.ec51.com release paper]
+[http://Roll_Label.ec51.com roll label]
+[http://Self_adhesive_Film.ec51.com self adhesive film]
+[http://Self_adhesive_Foil.ec51.com self adhesive foil]
+[http://Self_adhesive_Label.ec51.com self adhesive label]
+[http://Self_adhesive_Paper.ec51.com self adhesive paper]
+[http://Sports_Bag.ec51.com sports bag]
+[http://Suit_Bag.ec51.com suit bag]
+[http://T-shirt_Bag.ec51.com t-shirt bag]
+[http://Tea_Box.ec51.com tea box]
+[http://Tear_Tape.ec51.com tear tape]
+[http://Tin_Box.ec51.com tin box]
+[http://Tin_Can.ec51.com tin can]
+[http://Vacuum_Bag.ec51.com vacuum Bag]
+[http://Watch_Box.ec51.com watch box]
+[http://Wine_Bag.ec51.com wine bag]
+[http://Wire_Mesh_Container.ec51.com wire mesh container]
+[http://Wooden_Jewelry_Box.ec51.com wooden jewelry box]
+[http://Wooden_Wine_Box.ec51.com wooden wine box]
+[http://Ziplock_Bag.ec51.com ziplock bag]
+[http://Acetylene_Regulator.ec51.com acetylene regulator]
+[http://asiszeng.ec51.com pendant lamps]
+[http://asiszeng.ec51.com wall lamps]
+[http://asiszeng.ec51.com tabel lamps]
+[http://asiszeng.ec51.com ceiling lamps]
+[http://asiszeng.ec51.com floor lamps]
+[http://Food_Antioxidant.ec51.com Food Antioxidant]
+[http://Frozen_Strawberry.ec51.com Frozen Strawberry]
+[http://Frozen_Vegetable.ec51.com Frozen Vegetable]
+[http://Garlic_Sauce.ec51.com  Garlic Sauce]
+[http://Ginseng_Products.ec51.com Ginseng Products]
+[http://Herbal_Tea.ec51.com Herbal Tea]
+[http://Instant_Noodle.ec51.com Instant Noodle]
+[http://Jasmine_Tea.ec51.com Jasmine Tea]
+[http://MSG.ec51.com MSG]
+[http://Corn_Starch.ec51.com Corn Starch]
+[http://Monosodium.ec51.com Monosodium Glutamate]
+[http://Mung_Bean.ec51.com Mung Bean]
+[http://Olive_Oil.ec51.com olive oil]
+[http://Chain_wheel.ec51.com Chain wheel 已排]
+[http://Peanut_Kernel.ec51.com Peanut Kernel]
+[http://Rabbit_Meat.ec51.com Rabbit Meat]
+[http://Roasted_Peanuts.ec51.com Roasted Peanuts]
+[http://Sauce.ec51.com Sauce]
+[http://Seasoned_Seaweed.ec51.com Seasoned Seaweed]
+[http://Seasoning.ec51.com Seasoning]
+[http://Shredded_Squid.ec51.com Shredded Squid]
+[http://Soy_Sauce.ec51.com Soy Sauce]
+[http://Sunflower_Seeds.ec51.com Sunflower Seeds]
+[http://Sweet_Chestnut.ec51.com Sweet Chestnut]
+[http://Tomato_Paste.ec51.com Tomato Paste]
+[http://Vinegar.ec51.com Vinegar]
+[http://Wine.ec51.com Wine]
+[http://Yeast.ec51.com Yeast]
+[http://D_Lamp.ec51.com 2D Lamp]
+[http://Bulkhead_Light.ec51.com Bulkhead Light]
+[http://Digital_Multimeter.ec51.com Digital Multimeter]
+[http://Flow_Meter.ec51.com Flow Meter ]
+[http://Frequency_Meter.ec51.com Frequency Meter]
+[http://Energy_Meter.ec51.com Energy Meter]
+[http://Mechanical_Scale.ec51.com Mechanical_Scale]
+[http://Metal_Detector.ec51.com Metal Detector]
+[http://Multimeter.ec51.com Multimeter]
+[http://Pressure_Gauge.ec51.com Pressure Gauge]
+[http://Scale.ec51.com Scale]
+[http://Temperature.ec51.com Temperature controller]
+[http://Thermometer.ec51.com  Thermometer]
+[http://Water_Meter.ec51.com Water Meter]
+[http://apple.ec51.com apple]
+[http://Bamboo_Shoot.ec51.com Bamboo Shoot]
+[http://beer.ec51.com beer]
+[http://black_tea.ec51.com black tea]
+[http://Blanched_Peanut.ec51.com Blanched Peanut Kernel ]
+[http://Candy.ec51.com Candy]
+[http://Canned_Water.ec51.com Canned Water Chestnut]
+[http://Chili_Sauce.ec51.com Chili Sauce]
+[http://Cocoa_Powder.ec51.com Cocoa Powder]
+[http://Chocolate.ec51.com Chocolate ]
+[http://Dried_Apricot.ec51.com Dried Apricot]
+[http://Dried_Dates.ec51.com Dried Dates]
+[http://Edible_Oil.ec51.com Edible Oil]
+[http://Egg_Noodle.ec51.com Egg Noodle]
+[http://Egg_Roll.ec51.com Egg Roll]
+[http://FD_Products.ec51.com FD Products]
+[http://blog.ec51.net China Golden suppliers]
+[http://blog.ec51.net/archives.php China Golden suppliers]
+[http://www.usashow.net 展览]
+[http://www.usashow.net 展览会]
+[http://www.usashow.net 国际展览]
+[http://www.usashow.net 出国展览]
+[http://www.usashow.net 商务考察]
+[http://www.usashow.net 美国展览]
+[http://www.usashow.net 美国考察]
+[http://yikun.ec51.com power tools]
+[http://yikun.ec51.com Vacuum circuit breaker]
+[http://yikun.ec51.com Fuse cutout]
+[http://yikun.ec51.com metal oxide surge arrester]
+[http://Ceiling_Lamp.ec51.com Ceiling Lamp]
+[http://ceiling_light.ec51.com ceiling light]
+[http://Christmas_Light.ec51.com Christmas Light]
+[http://ccfl.ec51.com Cold Cathode Fluorescent Lamp ]
+[http://Desk_Lamp.ec51.com Desk Lamp]
+[http://Downlight.ec51.com Downlight]
+[http://Emergency_Light.ec51.com Emergency Light]
+[http://Energy_Saving.ec51.com Energy Saving Lamp]
+[http://Floodlight.ec51.com Floodlight]
+[http://FluorescentFixture.ec51.com Fluorescent Fixture]
+[http://Fluorescent_Lamp.ec51.com Fluorescent Lamp]
+[http://Garden_Light.ec51.com Garden Light]
+[http://Glass_Lamp.ec51.com Glass Lamp]
+[http://Halide_Lamp.ec51.com Halide Lamp]
+[http://Halogen_Lamp.ec51.com Halogen Lamp]
+[http://Hanging_Lamp.ec51.com Hanging Lamp]
+[http://Hpsl.ec51.com High Pressure Sodium Lamp]
+[http://Hurricane_Lamp.ec51.com Hurricane Lamp]
+[http://Incandescent_Bulb.ec51.com Incandescent bulb]
+[http://LED_Bulb.ec51.com LED Bulb]
+[http://LED_Flashlight.ec51.com LED Flashlight]
+[http://LED_Keychain.ec51.com LED Keychain flashlight]
+[http://LED_Lamp.ec51.com LED Lamp]
+[http://Lampshade.ec51.com Lampshade ]
+[http://Lawn_Lamp.ec51.com Lawn Lamp]
+[http://Light_Bulb.ec51.com Light Bulb]
+[http://Light_Fixture.ec51.com Light Fixture]
+[http://Lighting_Ballast.ec51.com Lighting Ballast]
+[http://Lighting_Controls.ec51.com Lighting Controls]
+[http://Mercury_Lamp.ec51.com Mercury Lamp]
+[http://Neon_Lamp.ec51.com Neon Lamp]
+[http://Neon_Tube.ec51.com Neon Tube]
+[http://Night_Lamp.ec51.com Night Lamp]
+[http://Night_Light.ec51.com Night Light]
+[http://Pilot_Lamp.ec51.com Pilot Lamp]
+[http://Pole_Lamp.ec51.com Pole Lamp]
+[http://Rechargeable.ec51.com Rechargeable Flashlight ]
+[http://Signal_Lamp.ec51.com Signal Lamp]
+[http://Solar_Lawn_Light.ec51.com Solar Lawn Light]
+[http://Artist_Brush.ec51.com artist brush]
+[http://Badge_Holder.ec51.com badge holder]
+[http://Badge_Lanyard.ec51.com badge lanyard]
+[http://Ballpoint_Pen.ec51.com ballpoint pen]
+[http://Business_Card_Holder.ec51.com business]
+[http://Calculator_Ruler.ec51.com calculator ruler]
+[http://Calendar_Calculator.ec51.com calendar calculator]
+[http://Caller_ID_Phone.ec51.com caller id phone]
+[http://Color_Pencil.ec51.com color pencil]
+[http://Computer_Desk.ec51.com computer desk]
+[http://Computer_Rack.ec51.com computer rack]
+[http://Conference_Table.ec51.com conference table]
+[http://Correction_Tape.ec51.com correction tape]
+[http://Desk_Calendar.ec51.com desk calendar]
+[http://Desk_Organizer.ec51.com desk organizer]
+[http://Desktop_Calculator.ec51.com desktop calculator]
+[http://Electronic_Dictionary.ec51.com electronic dictionary]
+[http://Executive_Chair.ec51.com executive chair]
+[http://Executive_Leather_Chair.ec51.com executive leather chair]
+[http://Executive_Table.ec51.com executive table]
+[http://File_Holder.ec51.com file holder]
+[http://Flash_Pen.ec51.com flash pen]
+[http://Fountain_Pen.ec51.com fountain pen]
+[http://Gel_Pen.ec51.com gel pen]
+[http://Glossy_Photo_Paper.ec51.com glossy photo paper]
+[http://Glue_Stick.ec51.com glue stick]
+[http://Highlighter_Pen.ec51.com highlighter pen]
+[http://Inkjet_Paper.ec51.com inkjet paper]
+[http://Laser_Toner_Cartridge.ec51.com laser toner cartridge]
+[http://Loose_Leaf_Notebook.ec51.com loose leaf notebook]
+[http://Marker_Pen.ec51.com marker pen]
+[http://Mechanical_Pencil.ec51.com mechanical pencil]  
+[http://Metal_Pen.ec51.com metal pen]
+[http://childrens_underwear.ec51.com Children's Clothing]
+[http://anmec.ec51.com computer accessories]
+[http://Office_Chair.ec51.com office chair]
+[http://Paper_Clip.ec51.com paper clip]
+[http://Paper_Punch.ec51.com Paper Punch ]
+[http://Paper_Shredder.ec51.com Paper Shredder]
+[http://Pen_Holder.ec51.com Pen Holder]
+[http://Pencil.ec51.com pencil]
+[http://Pencil_Box.ec51.com  Pencil Box]
+[http://Pencil_Case.ec51.com Pencil  Case]
+[http://Pencil_Sharpener.ec51.com Pencil Sharpener ]
+[http://Photo_Album.ec51.com photo album]
+[http://Photo_Paper.ec51.com Photo Paper]
+[http://Pocket_Calculator.ec51.com pocket calculator]
+[http://Printer_Ribbon.ec51.com printer ribbon]
+[http://Printing_Ink.ec51.com Printing Ink ]
+[http://Projector.ec51.com Projector ]
+[http://Promotional_Pen.ec51.com Promotional Pen]
+[http://Retractable_Pen.ec51.com Retractable Pen ]
+[http://Rollerball_Pen.ec51.com Rollerball Pen ]
+[http://Ruler.ec51.com Ruler ]
+[http://Stapler.ec51.com Stapler]
+[http://Stationery_Tape.ec51.com Stationery Tape]
+[http://Swivel_Chair.ec51.com Swivel Chair]
+[http://Tape_Dispenser.ec51.com Tape Dispenser ]
+[http://Telephone_Cable.ec51.com Telephone Cable ]
+[http://Telephone_Line_Cord.ec51.com Telephone Line Cord ]
+[http://Toner_Cartridge.ec51.com Toner Cartridge ]
+[http://Tripod.ec51.com Tripod ]
+[http://Utility_Knife.ec51.com Utility Knife]
+[http://Wall_Calendar.ec51.com Wall Calendar]
+[http://Watercolor_Pen.ec51.com Watercolor Pen ]
+[http://Whiteboard_Marker.ec51.com Whiteboard Marker]
+[http://World_Time_Calendar.ec51.com World Time Calendar]
+[http://Baby_Bed.ec51.com Baby Bed]
+[http://Baby_Clothes.ec51.com Baby Clothes]
+[http://Baby_Furniture.ec51.com Baby Furniture ]
+[http://Baby_Gifts.ec51.com Baby Gifts ]
+[http://Baby_Playpen.ec51.com Baby Playpen ]
+[http://Baby_Products.ec51.com Baby Products ]
+[http://Baby_Stroller.ec51.com Baby Stroller ]
+[http://Crib_Set.ec51.com Crib Set]
+[http://Acrylic_Blanket.ec51.com Acrylic Blanket]
+[http://Solar_Light.ec51.com Solar Light]
+[http://Spiral_Energy.ec51.com Spiral Energy Saving Lamp]
+[http://Stained_Glass_Lamp.ec51.com Stained Glass Lamp]
+[http://Street_Light.ec51.com Street Light]
+[http://Strobe_Light.ec51.com Strobe Light]
+[http://Studio_Flash.ec51.com Studio Flash]
+[http://table_lamp.ec51.com table lamp]
+[http://Tiffany_Lamp.ec51.com Tiffany Lamp]
+[http://Under_Cabinet.ec51.com Under Cabinet light]
+[http://Wall_Lamp.ec51.com Wall Lamp]
+[http://Work_Light.ec51.com Work Light]
+[http://Acupuncture_Needle.ec51.com Acupuncture Needle]
+[http://Adjustable_Bed.ec51.com Adjustable Bed ]
+[http://Amber_Glass.ec51.com Amber Glass Bottle]
+[http://sphygmomanometer.ec51.com aneroid sphygmomanometer]
+[http://Catheter.ec51.com Catheter]
+[http://Chinese_Medicine.ec51.com Chinese Medicine]
+[http://Clinical.ec51.com Clinical thermometer]
+[http://Crutch.ec51.com Crutch]
+[http://Disposable_set.ec51.com Disposable Infusion set ]
+[http://Disposable_Mask.ec51.com Disposable Mask]
+[http://Disposable_Syringe.ec51.com Disposable Syringe]
+[http://Ear_Thermometer.ec51.com Ear Thermometer]
+[http://First_Aid_Kit.ec51.com First Aid Kit]
+[http://Gauze_Bandage.ec51.com Gauze Bandage]
+[http://Gauze_Roll.ec51.com Gauze Roll]
+[http://Gauze_Swab.ec51.com Gauze Swab]
+[http://Glass_Vial.ec51.com Glass Vial]
+[http://Hospital_Bed.ec51.com Hospital Bed]
+[http://Hospital_Furniture.ec51.com Hospital Furniture]
+[http://Ice_bag.ec51.com Ice bag]
+[http://Lap_Sponge.ec51.com Lap Sponge]
+[http://Latex_Gloves.ec51.com Latex Gloves]
+[http://Medical_bandage.ec51.com Medical bandage]
+[http://Medical_Gauze.ec51.com Medical Gauze]
+[http://Medical_Refrig.ec51.com Medical Refrigerator ]
+[http://Medical_Sponge.ec51.com Medical Sponge]
+[http://Medical_Thermo.ec51.com Medical Thermometer]
+[http://Medical_Trolley.ec51.com Medical Trolley]
+[http://Microscope_Slide.ec51.com Microscope Slide]
+[http://Microtome.ec51.com Microtome]
+[http://Molded_Injection.ec51.com Molded Injection vial]
+[http://Powered_Wheelchair.ec51.com Powered Wheelchair]
+[http://Sphygmomano.ec51.com Sphygmomanometer]
+[http://Stethoscope.ec51.com Stethoscope]
+[http://Stretcher_Trolley.ec51.com Stretcher Trolley]
+[http://Surgical_Gloves.ec51.com Surgical Gloves]
+[http://Surgical_Gown.ec51.com Surgical Gown]
+[http://Surgical_Instru.ec51.com Surgical Instrument]
+[http://Syringe.ec51.com Syringe]
+[http://Tattoo_Needle.ec51.com Tattoo Needle]
+[http://Tubular_Injection.ec51.com Tubular Injection vial]
+[http://Tubular_Injection.ec51.com Tubular Injection]
+[http://Urine_Bag.ec51.com Urine Bag]
+[http://Vaginal_Speculum.ec51.com Vaginal Speculum]
+[http://Veterinary_Medicine.ec51.com Veterinary Medicine]
+[http://Vinyl_Gloves.ec51.com Vinyl Gloves]
+[http://Wheel_Chair.ec51.com Wheel Chair]
+[http://Infrared_Camera.ec51.com Infrared Camera]
+[http://Optical_Lens.ec51.com Optical Lens]
+[http://CMOS_Camera.ec51.com CMOS Camera]
+[http://Magnifier.ec51.com Magnifier]
+[http://Reading_Glasses.ec51.com Reading Glasses]
+[http://Eyeglass_Case.ec51.com Eyeglass Case]
+[http://microscope.ec51.com microscope]
+[http://Sunglasses.ec51.com Sunglasses]
+[http://Eyeglass_Frame.ec51.com Eyeglass Frame]
+[http://Sunglasses_Lens.ec51.com Sunglasses Lens]
+[http://Goggles.ec51.com Goggles]
+[http://longlivebt.ec51.com food ingredient]
+[http://chemshine.ec51.com non explosive demolition agent]
+[http://bs1208.cn.ec51.com 旅游用品]
+[http://bs1208.cn.ec51.com 文体用品]
