redirected to "Qur'an", which already has this content <koran#45650>

--- a/wiki/koran.wikitext
+++ b/wiki/koran.wikitext
@@ -1,37 +1,1 @@
-==English==
-=== Noun ===
-'''koran''' ([[korans]])
-
-====Alternative spellings====<!-- shouldn't many of these be capitalised? -->
-*[[alcoran]] (obsolete)
-*[[quran]]
-*[[qur'an]], [[qur’an]]
-
-#Usually with the definite article, the [[Islamic]] Holy book.
-#A copy of the Qur'an.
-
-==== Translations ====
-*Arabic:
-*#[[القُرْآن]]
-*#[[قُرْآن]]
-*[[Basque]]: Koran
-*Bulgarian: [[Коран]] ''m''
-*Chinese: [[古蘭經]], [[古兰经]] (gǔlánjīng); [[可蘭經]], [[可兰经]] (kělánjīng)
-*Danish: [[Koranen]], Koran ''c''
-*Dutch: de koran
-*[[Esperanto]]: [[Korano]]
-*Finnish: [[koraani]]
-*French: le [[coran]] ''m''
-*German: der Koran ''m''
-*Hebrew:
-*#[[הקוראן]]
-*#[[קוראן]]
-*Indonesian: [[Al Qur'an]]
-*Japanese: [[クルアーン]] (kuruan), [[コーラン]] (Koran)
-*Korean: [[꾸란]]
-*Polish: koran
-*Romanian: [[Coranul]] (1), [[Coran]] (2)
-*[[Romanica]]: [[Coran]] ''m''
-*Slovene: [[Koran]] ''m''
-*Spanish: el [[Corán]] ''m''
-*Swedish: [[koranen]] (1), koran ''c'' (2)
+#REDIRECT [[Qur'an]]
