moved Hebrew into tables <Qur'an#35840>

--- a/wiki/Qur%27an.wikitext
+++ b/wiki/Qur%27an.wikitext
@@ -22,6 +22,7 @@
 *Arabic: [[القُرْآن]]
 *French: le [[Coran]] ''m''
 *German: der [[Koran]] ''m''
+*Hebrew: [[הקוראן]]
 *Italian: il [[Corano]] ''m''
 |}
 | width=1% |
@@ -43,6 +44,7 @@
 *Arabic: [[قُرْآن]]
 *French: le [[Coran]] ''m''
 *German: der [[Koran]] ''m''
+*Hebrew: [[קוראן]]
 *Italian: il [[Corano]] ''m''
 |}
 | width=1% |
@@ -67,7 +69,6 @@ The translations below need to be checked by native speakers and inserted into t
 *Dutch: de [[Koran]]
 *[[Esperanto]]: [[Korano]]
 *Finnish: [[koraani]]
-*Hebrew: [[הקוראן]] (one), [[קוראן]] (two))<!-- numbers spelled because bidi algorithm messes up digits -->
 *Indonesian: [[Al Qur'an]]
 *Japanese: [[クルアーン]] (kuruan)
 *Korean: [[꾸란]]
