corrected typo ("arrythmia") <pulse#40884>

--- a/wiki/pulse.wikitext
+++ b/wiki/pulse.wikitext
@@ -16,13 +16,13 @@ Latin '''[[pulsus]]'''&mdash;''beat'', from '''pellere'''&mdash;''to drive''
 *Finnish: [[pulssi]] (1), [[syke]] (2)
 *Slovak: [[pulz]] ''m'' (1)
 
-====See Also====
-* [[beat]]
-* [[arrythmia]]
-* [[blood pressure]]
-* [[heart beat]]
-* [[meter]]
-* [[tempo]]
+====See also====
+*[[beat]]
+*[[arrhythmia]]
+*[[blood pressure]]
+*[[heartbeat]]
+*[[meter]]
+*[[tempo]]
 
 ====References====
 *DeLone et. al. (Eds.) (1975). Aspects of Twentieth-Century Music. Englewood Cliffs, New Jersey: Prentice-Hall. ISBN 0130493465.
