fmt; deleted extra etymology; translation tables (please tabulate Finnish and Slovak); music def is a possible copyvio <pulse#40884>

--- a/wiki/pulse.wikitext
+++ b/wiki/pulse.wikitext
@@ -1,18 +1,70 @@
-=== Etymology ===
-Latin '''[[puls]]''', akin to ''[[pollen]]''
-=== Noun ===
-'''pulse'''
-# A class of [[vegetable]]s including [[pea]]s and [[bean]]s.
+==English==
 === Etymology ===
 Latin '''[[pulsus]]'''&mdash;''beat'', from '''pellere'''&mdash;''to drive''
+
 ===Noun===
-'''pulse'''
-#A normally regular beat felt when arteries are depressed, caused by the pumping action of the heart.
+'''pulse''' (''plural'' '''pulses''')
+
+#Any annual [[legume]] yielding from 1 to 12 grains or seeds of variable size, shape and colour within a pod, and used as food for humans or animals.
+
+===Noun===
+'''pulse''' (''plural'' '''pulses''')
+
+#(''physiology'') A normally regular beat felt when arteries are depressed, caused by the pumping action of the heart.
 #A [[beat]], [[throb]].
-#In music a '''pulse''' is periodically recurring short stimuli which are perceived as points in time. (DeLone et. al. (Eds.), 1975, chap. 3) Often the stimuli are defined as identical (Cooper & Meyer, 1960).
-# An annual [[leguminous]] crop yielding from 1 to 12 grains or seeds of variable size, shape and colour within a pod. Pulses are used for food and animal feed.
+<!--possible copyvio
+#(''music'') A periodically recurring short stimulus, perceived as points in time. (DeLone et. al. (Eds.), 1975, chap. 3) Often the stimuli are defined as identical (Cooper & Meyer, 1960).
+-->
 
 ==== Translations ====
+
+'''regular beat caused by the heart'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
+'''a beat, throb'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
+'''in music'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
+=====Translations to be checked=====
+<!--Remove this section once all of the translations below have been moved into the tables above.-->
+
+The translations below need to be checked by native speakers and inserted into the appropriate table(s) above.  The numbering may be unreliable.
+
 *Finnish: [[pulssi]] (1), [[syke]] (2)
 *Slovak: [[pulz]] ''m'' (1)
 
