--- a/wiki/pulse.wikitext
+++ b/wiki/pulse.wikitext
@@ -1,6 +1,6 @@
 ==English==
 === Etymology ===
-Latin '''[[pulsus]]'''&mdash;''beat'', from '''pellere'''&mdash;''to drive''
+Latin ''[[pulsus]]'', beat, from ''[[pellere]]'', to drive
 
 ===Noun===
 '''pulse''' (''plural'' '''pulses''')
